--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
 .container{
-	background-color:gray;
+  background-color:gray;
 	width:300px;
 	height:300px;
 	display:flex;
@@ -13,12 +13,12 @@
  width:200px;
  height:2px;
  background-color:black;
-animetion: rotate 5s linear infinite;
+animation: rotate 5s linear infinite;
 	
 }
 @keyframe rotate {
 	
-	100%{
+	to{
 	transform:rotate(360deg);
 	}
 	
